--- a/.github/workflows/ci_android.yml
+++ b/.github/workflows/ci_android.yml
@@ -33,13 +33,13 @@ jobs:
       - name: Import Secrets
         uses: actions/checkout@v2
         with:
-          repository: DanXi-Dev/DanXi-secrets
+          repository: habacat/DanXi-secrets
           path: secrets
           ssh-key: ${{ secrets.SECRETS_SSH_KEY }}
       
       - name: Populate Secrets
         run: |
-          mv -f secrets/sksl_default.json CI/sksl_default.json
+          # mv -f secrets/sksl_default.json CI/sksl_default.json
           mv -f secrets/key.properties android/key.properties
           mv -f secrets/danxi.keystore android/danxi.keystore
 
